# AI-Assignment-Code-Reviewer

./: .gitignore  README.md  pyproject.toml
data/assignment_solution/assignment1/: sir_100.py
data/assignments/: Assignment.json
src/backend/api/: connect_LLM.py
src/backend/parsers/: document_parser.py
src/backend/repository/: assignment_stub.py  rubric_stub.py
src/backend/services/: grading_service.py  ingestion_service.py  rubric_service.py
